Fix #24097: Zoom to imagery layer
This fixes two issues:
1. Adds implementation for `visitBoundingBox` used by the `Zoom to layer` action
2. Uses `addLayer(Layer, boolean)` to avoid zooming to the bounds of the layer on layer add

Also, clean up some deprecation warnings.

git-svn-id: https://josm.openstreetmap.de/svn/trunk@19289 0c6e7542-c601-0410-84e7-c038aed88b3b